--- a/src/IdentityService/Pages/Index.cshtml
+++ b/src/IdentityService/Pages/Index.cshtml
@@ -33,14 +33,14 @@
         </li>
     </ul>
 
-    @if(Model.License != null)
+    @* @if(Model.License != null)
     {
-        <h2>License</h2>
-        <dl>
-            <dt>Serial Number</dt>
-            <dd>@Model.License.SerialNumber</dd>
-            <dt>Expiration</dt>
-            <dd>@Model.License.Expiration!.Value.ToLongDateString()</dd>
-        </dl>
-    }
+    <h2>License</h2>
+    <dl>
+    <dt>Serial Number</dt>
+    <dd>@Model.License.SerialNumber</dd>
+    <dt>Expiration</dt>
+    <dd>@Model.License.Expiration!.Value.ToLongDateString()</dd>
+    </dl>
+    } *@
 </div>
