--- a/src/IdentityService/Pages/Shared/_Nav.cshtml
+++ b/src/IdentityService/Pages/Shared/_Nav.cshtml
@@ -13,7 +13,7 @@
 
         <a href="~/" class="navbar-brand">
             <img src="~/duende-logo.svg" class="icon-banner">
-            Cube Enchère Identification
+            Cube Identification
         </a>
 
         @if (!string.IsNullOrWhiteSpace(name))
